--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,10 +11,10 @@
     <string name="closeNavDrawer">Navigation Drawer Close</string>
     <string name="send">Send</string>
     <string name="download">Download</string>
-    <string name="asteroids_neows">Asteroids - NeoWs</string>
-    <string name="epic">EPIC</string>
-    <string name="insight_mars_weather">InSight: Mars Weather</string>
-    <string name="mars_rover_photos">Mars Rover Photos</string>
+    <string name="asteroids_neows">Asteroids - NeoWss</string>
+    <string name="epic">EPICs - Coming Soon</string>
+    <string name="insight_mars_weather">InSight: Mars Weathers - Coming Soon</string>
+    <string name="mars_rover_photos">Mars Rover Photoss - Coming Soon</string>
     <string name="title_activity_settings">SettingsActivity</string>
 
     <!-- Preference Titles -->
