Navigation Drawer(2) *Design *Changing icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,6 @@
     <string name="app">APP</string>
     <string name="settings">Settings</string>
     <string name="info">Info</string>
+    <string name="favorites">Favorites</string>
+    <string name="profile">Profile</string>
 </resources>
