--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="info">Info</string>
     <string name="favorites">Favorites</string>
     <string name="profile">Profile</string>
+    <string name="near_earth_objects">Near Earth Objects:</string>
 </resources>
